--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ coverage
 # production
 build
 release
+dist
 
 # misc
 .DS_Store
@@ -16,7 +17,7 @@ release
 .env.development.local
 .env.test.local
 .env.production.local
-
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
