fix(linter): format with linter

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,9 @@
   "semi": true,
   "trailingComma": "all",
   "singleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "svelteSortOrder" : "styles-scripts-markup",
+  "svelteStrictMode": true,
+  "svelteBracketNewLine": false,
+  "svelteAllowShorthand": false
 }
