--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
 		"start": "npm-run-all -p dev electron",
 		"electron": "electron .",
 		"dev": "run-p start:dev autobuild",
-		"test": "jest --watch=true",
+		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage --no-cache",
-		"lint": "./node_modules/.bin/eslint --fix ./src",
+		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
 		"start:prod": "sirv --port 4567 public",
 		"start:dev": "sirv --port 4567 public --dev"
 	},
@@ -68,7 +68,8 @@
 		"lint-staged": "10.0.8",
 		"node-sass": "4.13.1",
 		"npm-run-all": "4.1.5",
-		"prettier": "1.19.1",
+		"prettier": "^1.19.1",
+		"prettier-plugin-svelte": "^1.1.0",
 		"pretty-quick": "2.0.1",
 		"rollup": "2.0.2",
 		"rollup-plugin-livereload": "1.0.4",
