--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "overrides": [
         {
             "files": [
-                "**/*.svelte"
+                "*.svelte"
             ],
             "processor": "svelte3/svelte3"
         }
@@ -34,6 +34,7 @@
                 ]
             }
         ],
-        "arrow-parens": ["error", "as-needed"]
+        "arrow-parens": ["error", "as-needed"],
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
     }
 }
