--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
      run: |
       mkdir -p ~/private_keys/
       echo '${{ secrets.api_key }}' > ~/private_keys/AuthKey_${{ secrets.api_key_id }}.p8
-   - name: Build/release Electron app
+   - name: Build/release Skizzle
      uses: samuelmeuli/action-electron-builder@v1
      with:
       # GitHub token, automatically provided to the action
