--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,7 +6,7 @@ on:
    - master
  pull_request:
   types: [opened, synchronize, reopened]
-name: Main Workflow
+name: Check coverage
 jobs:
  sonarcloud:
   runs-on: ubuntu-latest
