--- a/package.json
+++ b/package.json
@@ -46,11 +46,16 @@
 		"@babel/plugin-transform-runtime": "7.8.3",
 		"@babel/preset-env": "7.8.7",
 		"@babel/runtime": "7.8.7",
+		"@rollup/plugin-commonjs": "11.0.2",
+		"@rollup/plugin-node-resolve": "7.1.1",
+		"@testing-library/jest-dom": "5.1.1",
+		"@testing-library/svelte": "1.11.0",
 		"babel-core": "6.26.3",
 		"babel-jest": "25.1.0",
 		"babel-polyfill": "6.26.0",
 		"electron": "8.0.1",
 		"electron-builder": "22.4.0",
+		"electron-builder-notarize": "^1.1.2",
 		"electron-reloader": "^1.0.1",
 		"eslint": "6.8.0",
 		"eslint-config-airbnb-base": "14.0.0",
@@ -62,16 +67,12 @@
 		"jest-localstorage-mock": "2.4.0",
 		"jest-transform-svelte": "2.1.1",
 		"lint-staged": "10.0.8",
+		"node-sass": "4.13.1",
 		"npm-run-all": "4.1.5",
 		"prettier": "1.19.1",
 		"pretty-quick": "2.0.1",
-		"node-sass": "4.13.1",
 		"rollup": "2.0.2",
-		"@rollup/plugin-commonjs": "11.0.2",
 		"rollup-plugin-livereload": "1.0.4",
-		"@rollup/plugin-node-resolve": "7.1.1",
-		"@testing-library/jest-dom": "5.1.1",
-		"@testing-library/svelte": "1.11.0",
 		"rollup-plugin-svelte": "5.1.1",
 		"rollup-plugin-terser": "5.2.0",
 		"svelte": "3.19.2",
@@ -99,6 +100,7 @@
 			"public/**/*",
 			"node_modules/**/*"
 		],
+		"afterSign": "electron-builder-notarize",
 		"mac": {
 			"type": "distribution",
 			"target": [
@@ -106,7 +108,15 @@
 				"zip",
 				"dmg"
 			],
-			"category": "public.app-category.news"
+			"category": "public.app-category.news",
+			"entitlements": "./buildResources/entitlements.mac.plist",
+			"entitlementsInherit": "./buildResources/entitlements.mac.plist",
+			"hardenedRuntime": true
+		},
+		"mas": {
+			"entitlements": "./buildResources/entitlements.mas.plist",
+			"entitlementsInherit": "./buildResources/entitlements.mas.inherit.plist",
+			"hardenedRuntime": false
 		},
 		"directories": {
 			"buildResources": "buildResources/"
