--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 on:
- - pull_request
-
+ push:
+  branches:
+   - master
+ pull_request:
+  types: [opened, synchronize, reopened]
 name: Check tests
 jobs:
  test:
