--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ jobs:
   # Platforms to build on/for
   strategy:
    matrix:
-    os: [macos-latest, windows-latest]
+    os: [windows-latest]
+    #os: [macos-latest, windows-latest]
 
   steps:
    - name: Check out Git repository
@@ -23,12 +24,12 @@ jobs:
      with:
       node-version: 12
 
-   - name: Prepare for app notarization (macOS)
-     if: startsWith(matrix.os, 'macos')
-     # Import Apple API key for app notarization on macOS
-     run: |
-      mkdir -p ~/private_keys/
-      echo '${{ secrets.api_key }}' > ~/private_keys/AuthKey_${{ secrets.api_key_id }}.p8
+   #- name: Prepare for app notarization (macOS)
+   #  if: startsWith(matrix.os, 'macos')
+   # Import Apple API key for app notarization on macOS
+   #  run: |
+   #   mkdir -p ~/private_keys/
+   #   echo '${{ secrets.api_key }}' > ~/private_keys/AuthKey_${{ secrets.api_key_id }}.p8
    - name: Build/release Skizzle
      uses: samuelmeuli/action-electron-builder@v1
      with:
@@ -37,13 +38,13 @@ jobs:
       github_token: ${{ secrets.github_token }}
 
       # macOS code signing certificate
-      mac_certs: ${{ secrets.mac_certs }}
-      mac_certs_password: ${{ secrets.mac_certs_password }}
+      #   mac_certs: ${{ secrets.mac_certs }}
+      #   mac_certs_password: ${{ secrets.mac_certs_password }}
 
       # If the commit is tagged with a version (e.g. "v1.0.0"),
       # release the app after building
       release: ${{ startsWith(github.ref, 'refs/tags/v') }}
      env:
       # macOS notarization API key
-      API_KEY_ID: ${{ secrets.api_key_id }}
-      API_KEY_ISSUER_ID: ${{ secrets.api_key_issuer_id }}
+   #   API_KEY_ID: ${{ secrets.api_key_id }}
+   #   API_KEY_ISSUER_ID: ${{ secrets.api_key_issuer_id }}
