--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
   strategy:
    matrix:
-    os: [windows-latest]
+    os: [macos-latest, windows-latest]
   steps:
    - name: Check out Git repository
      uses: actions/checkout@v2
