--- a/package.json
+++ b/package.json
@@ -102,23 +102,12 @@
 			"public/**/*",
 			"node_modules/**/*"
 		],
-		"afterSign": "electron-builder-notarize",
 		"mac": {
 			"type": "distribution",
 			"target": [
-				"mas",
-				"zip",
 				"dmg"
 			],
-			"category": "public.app-category.news",
-			"entitlements": "./buildResources/entitlements.mac.plist",
-			"entitlementsInherit": "./buildResources/entitlements.mac.plist",
-			"hardenedRuntime": true
-		},
-		"mas": {
-			"entitlements": "./buildResources/entitlements.mas.plist",
-			"entitlementsInherit": "./buildResources/entitlements.mas.inherit.plist",
-			"hardenedRuntime": false
+			"category": "public.app-category.news"
 		},
 		"directories": {
 			"buildResources": "buildResources/"
