doc: Update contributors

--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
 			"name": "Jerome Boukorras",
 			"email": "jerome.boukorras@gmail.com",
 			"url": "https://github.com/itupix"
+		},
+		{
+			"name": "Hamza HAMIDI",
+			"url": "https://github.com/hamzahamidi"
 		}
 	],
 	"license": "MIT",
