--- a/package.json
+++ b/package.json
@@ -54,45 +54,47 @@
 		"@commitlint/config-conventional": "9.1.1",
 		"@rollup/plugin-commonjs": "14.0.0",
 		"@rollup/plugin-node-resolve": "8.4.0",
-		"@testing-library/jest-dom": "5.11.0",
+		"@rollup/plugin-replace": "2.3.3",
+		"@testing-library/jest-dom": "5.11.2",
 		"@testing-library/svelte": "3.0.0",
 		"babel-core": "6.26.3",
 		"babel-jest": "26.1.0",
 		"babel-polyfill": "6.26.0",
-		"electron": "9.1.0",
-		"electron-builder": "22.7.0",
+		"electron": "9.1.2",
+		"electron-builder": "22.8.0",
 		"electron-builder-notarize": "1.2.0",
 		"electron-reloader": "1.0.1",
-		"eslint": "7.4.0",
+		"eslint": "7.5.0",
 		"eslint-config-airbnb-base": "14.2.0",
 		"eslint-plugin-import": "2.22.0",
-		"eslint-plugin-jest": "23.18.0",
+		"eslint-plugin-jest": "23.20.0",
 		"eslint-plugin-svelte3": "2.7.3",
 		"husky": "4.2.5",
-		"jest": "26.1.0",
-		"jest-localstorage-mock": "2.4.2",
-		"jest-transform-svelte": "2.1.1",
+		"jest": "26.2.1",
+		"json-server": "^0.16.1",
+		"jest-localstorage-mock": "2.4.3",
 		"lint-staged": "10.2.11",
-		"node-sass": "4.14.1",
+		"sass": "^1.26.10",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.5",
 		"pretty-quick": "2.0.1",
-		"rollup": "2.21.0",
+		"rollup": "2.23.0",
+		"rollup-plugin-filesize": "^9.0.2",
 		"rollup-plugin-livereload": "1.3.0",
 		"rollup-plugin-svelte": "5.2.3",
 		"rollup-plugin-terser": "6.1.0",
 		"svelte": "3.24.0",
 		"svelte-jester": "1.0.6",
-		"svelte-preprocess": "4.0.8"
+		"svelte-preprocess": "4.0.9"
 	},
 	"dependencies": {
 		"electron-context-menu": "2.2.0",
 		"electron-debug": "3.1.0",
 		"electron-log": "4.2.2",
 		"electron-unhandled": "3.0.2",
-		"electron-updater": "4.3.1",
+		"electron-updater": "4.3.4",
 		"electron-util": "0.14.2",
-		"sirv-cli": "1.0.3"
+		"sirv-cli": "1.0.4"
 	},
 	"build": {
 		"appId": "skizzle",
