--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"start": "npm-run-all -p dev electron",
 		"electron": "electron .",
 		"dev": "run-p start:dev autobuild",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:coverage": "jest --coverage --no-cache",
+		"test": "jest src",
+		"test:watch": "npm run test -- --watch",
+		"test:coverage": "npm run test -- --coverage",
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
 		"start:prod": "sirv --port 4567 public",
 		"start:dev": "sirv --port 4567 public --dev"
@@ -71,10 +71,9 @@
 		"eslint-plugin-svelte3": "2.7.3",
 		"husky": "4.2.5",
 		"jest": "26.2.1",
-		"json-server": "^0.16.1",
 		"jest-localstorage-mock": "2.4.3",
+		"json-server": "^0.16.1",
 		"lint-staged": "10.2.11",
-		"sass": "^1.26.10",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.5",
 		"pretty-quick": "2.0.1",
@@ -83,6 +82,7 @@
 		"rollup-plugin-livereload": "1.3.0",
 		"rollup-plugin-svelte": "5.2.3",
 		"rollup-plugin-terser": "6.1.0",
+		"sass": "^1.26.10",
 		"svelte": "3.24.0",
 		"svelte-jester": "1.0.6",
 		"svelte-preprocess": "4.0.9"
