--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"test:coverage": "npm run test -- --coverage",
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
 		"start:prod": "sirv --port 4567 public",
-		"start:dev": "sirv --port 4567 public --dev"
+		"start:dev": "sirv --port 4567 public --dev",
+		"electron:windows": "rm -rf release && npm run build && npx electron-builder build --windows",
+		"electron:mac": "rm -rf release && npm run build && npx electron-builder build --mac"
 	},
 	"keywords": [
 		"electron",
