--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage --no-cache",
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
-		"svelte-check": "svelte-check --workspace src/",
+		"validate": "svelte-check --workspace src/",
 		"start:prod": "sirv --port 4567 public",
 		"start:dev": "sirv --port 4567 public --dev"
 	},
@@ -47,57 +47,59 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "7.10.5",
-		"@babel/plugin-transform-runtime": "7.10.5",
-		"@babel/preset-env": "7.10.4",
-		"@babel/runtime": "7.10.5",
+		"@babel/core": "7.11.1",
+		"@babel/plugin-transform-runtime": "7.11.0",
+		"@babel/preset-env": "7.11.0",
+		"@babel/runtime": "7.11.2",
 		"@commitlint/cli": "9.1.1",
 		"@commitlint/config-conventional": "9.1.1",
 		"@rollup/plugin-commonjs": "14.0.0",
 		"@rollup/plugin-node-resolve": "8.4.0",
-		"@rollup/plugin-typescript": "^5.0.2",
-		"@testing-library/jest-dom": "5.11.1",
+		"@rollup/plugin-typescript": "5.0.2",
+		"@testing-library/jest-dom": "5.11.2",
 		"@testing-library/svelte": "3.0.0",
-		"@tsconfig/svelte": "^1.0.8",
+		"@tsconfig/svelte": "1.0.8",
+		"@types/node": "14.0.27",
 		"babel-core": "6.26.3",
-		"babel-jest": "26.1.0",
+		"babel-jest": "26.2.2",
 		"babel-polyfill": "6.26.0",
-		"electron": "9.1.1",
-		"electron-builder": "22.7.0",
+		"electron": "9.2.0",
+		"electron-builder": "22.8.0",
 		"electron-builder-notarize": "1.2.0",
 		"electron-reloader": "1.0.1",
-		"eslint": "7.5.0",
+		"eslint": "7.6.0",
 		"eslint-config-airbnb-base": "14.2.0",
 		"eslint-plugin-import": "2.22.0",
-		"eslint-plugin-jest": "23.18.0",
+		"eslint-plugin-jest": "23.20.0",
 		"eslint-plugin-svelte3": "2.7.3",
 		"husky": "4.2.5",
-		"jest": "26.1.0",
+		"jest": "26.2.2",
 		"jest-localstorage-mock": "2.4.3",
 		"jest-transform-svelte": "2.1.1",
 		"lint-staged": "10.2.11",
-		"node-sass": "4.14.1",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.5",
 		"pretty-quick": "2.0.1",
-		"rollup": "2.22.1",
+		"rollup": "2.23.1",
 		"rollup-plugin-livereload": "1.3.0",
 		"rollup-plugin-svelte": "5.2.3",
 		"rollup-plugin-terser": "6.1.0",
-		"svelte": "3.24.0",
-		"svelte-check": "^1.0.9",
+		"sass": "1.26.10",
+		"svelte": "3.24.1",
+		"svelte-check": "1.0.10",
 		"svelte-jester": "1.0.6",
-		"svelte-preprocess": "4.0.8",
-		"typescript": "^3.9.7"
+		"svelte-preprocess": "4.0.10",
+		"tslib": "2.0.1",
+		"typescript": "3.9.7"
 	},
 	"dependencies": {
-		"electron-context-menu": "2.2.0",
+		"electron-context-menu": "2.3.0",
 		"electron-debug": "3.1.0",
 		"electron-log": "4.2.2",
 		"electron-unhandled": "3.0.2",
-		"electron-updater": "4.3.1",
+		"electron-updater": "4.3.4",
 		"electron-util": "0.14.2",
-		"sirv-cli": "1.0.3"
+		"sirv-cli": "1.0.5"
 	},
 	"build": {
 		"appId": "skizzle",
