feat(actions): adding news actions, update dependencies and documentation

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"start": "npm-run-all -p dev electron",
 		"electron": "electron .",
 		"dev": "run-p start:dev autobuild",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:coverage": "jest --coverage --no-cache",
+		"test": "jest src ",
+		"test:watch": "npm run test -- --watch",
+		"test:coverage": "npm run test -- --coverage",
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
 		"start:prod": "sirv --port 4567 public",
-		"start:dev": "sirv --port 4567 public --dev"
+		"start:dev": "sirv --port 4567 public --dev",
+		"electron:windows": "rm -rf release && npm run build && npx electron-builder build --windows",
+		"electron:mac": "rm -rf release && npm run build && npx electron-builder build --mac"
 	},
 	"keywords": [
 		"electron",
@@ -46,30 +48,30 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "7.10.5",
-		"@babel/plugin-transform-runtime": "7.10.5",
-		"@babel/preset-env": "7.10.4",
-		"@babel/runtime": "7.10.5",
+		"@babel/core": "7.11.1",
+		"@babel/plugin-transform-runtime": "7.11.0",
+		"@babel/preset-env": "7.11.0",
+		"@babel/runtime": "7.11.2",
 		"@commitlint/cli": "9.1.1",
 		"@commitlint/config-conventional": "9.1.1",
 		"@rollup/plugin-commonjs": "14.0.0",
 		"@rollup/plugin-node-resolve": "8.4.0",
-		"@testing-library/jest-dom": "5.11.1",
+		"@testing-library/jest-dom": "5.11.3",
 		"@testing-library/svelte": "3.0.0",
 		"babel-core": "6.26.3",
-		"babel-jest": "26.1.0",
+		"babel-jest": "26.3.0",
 		"babel-polyfill": "6.26.0",
-		"electron": "9.1.1",
-		"electron-builder": "22.7.0",
+		"electron": "9.2.0",
+		"electron-builder": "22.8.0",
 		"electron-builder-notarize": "1.2.0",
 		"electron-reloader": "1.0.1",
-		"eslint": "7.5.0",
+		"eslint": "7.6.0",
 		"eslint-config-airbnb-base": "14.2.0",
 		"eslint-plugin-import": "2.22.0",
-		"eslint-plugin-jest": "23.18.0",
+		"eslint-plugin-jest": "23.20.0",
 		"eslint-plugin-svelte3": "2.7.3",
 		"husky": "4.2.5",
-		"jest": "26.1.0",
+		"jest": "26.3.0",
 		"jest-localstorage-mock": "2.4.3",
 		"jest-transform-svelte": "2.1.1",
 		"lint-staged": "10.2.11",
@@ -77,22 +79,22 @@
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.5",
 		"pretty-quick": "2.0.1",
-		"rollup": "2.22.1",
+		"rollup": "2.23.1",
 		"rollup-plugin-livereload": "1.3.0",
 		"rollup-plugin-svelte": "5.2.3",
-		"rollup-plugin-terser": "6.1.0",
-		"svelte": "3.24.0",
+		"rollup-plugin-terser": "7.0.0",
+		"svelte": "3.24.1",
 		"svelte-jester": "1.0.6",
-		"svelte-preprocess": "4.0.8"
+		"svelte-preprocess": "4.0.11"
 	},
 	"dependencies": {
-		"electron-context-menu": "2.2.0",
+		"electron-context-menu": "2.3.0",
 		"electron-debug": "3.1.0",
-		"electron-log": "4.2.2",
+		"electron-log": "4.2.3",
 		"electron-unhandled": "3.0.2",
-		"electron-updater": "4.3.1",
+		"electron-updater": "4.3.4",
 		"electron-util": "0.14.2",
-		"sirv-cli": "1.0.3"
+		"sirv-cli": "1.0.5"
 	},
 	"build": {
 		"appId": "skizzle",
