--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
+	"compilerOptions": {
+		"types": ["node"]
+	},
 	"extends": "@tsconfig/svelte/tsconfig.json",
-	"include": ["src"],
-	"exclude": ["node_modules"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
