feat(labels): add typescript and testing labels

--- a/.github/label-pr.yml
+++ b/.github/label-pr.yml
@@ -1,3 +1,7 @@
+- regExp: ".*\\.ts+$"
+  labels: ['typescript']
+- regExp: '.*.spec..*+$'
+  labels: ['testing']
 - regExp: ".*\\.svelte+$"
   labels: ['svelte', 'component']
 - regExp: ".*\\.js+$"
