fix(labels): fix testing

--- a/.github/label-pr.yml
+++ b/.github/label-pr.yml
@@ -1,6 +1,6 @@
 - regExp: ".*\\.ts+$"
   labels: ['typescript']
-- regExp: '.*.spec..*+$'
+- regExp: ".*\\.spec.*+$"
   labels: ['testing']
 - regExp: ".*\\.svelte+$"
   labels: ['svelte', 'component']
