--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,7 @@
 sonar.organization=axaguildev
 sonar.projectKey=skizzle
-sonar.sources=src 
+sonar.sources=src
+sonar.tests=src
+sonar.test.inclusions=src/**/*.test.js
+sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
+sonar.testExecutionReportPaths=coverage/jest/testlog.xml
