--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.organization=axaguildev
 sonar.projectKey=skizzle
+sonar.projectVersion=1.0.0
 sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=src/**/*.test.js
