--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
 	},
 	"extends": "@tsconfig/svelte/tsconfig.json",
 	"include": ["src/**/*"],
-	"exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+	"exclude": ["node_modules/*", "__sapper__/*", "public/*"],
+	"baseUrl": "."
 }
