--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	},
 	"scripts": {
 		"postinstall": "electron-builder install-app-deps",
-		"precommit": "lint-staged pretty-quick --staged",
+		"package-lock-sanitizer": "package-lock-sanitizer",
+		"precommit": "pretty-quick --staged",
 		"build": "rollup -c --extend",
 		"autobuild": "rollup -c -w --extend",
 		"start": "npm-run-all -p dev electron",
@@ -21,6 +22,7 @@
 		"test:watch": "npm run test -- --watch",
 		"test:coverage": "npm run test -- --coverage",
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.svelte --fix",
+		"validate": "svelte-check --workspace src/",
 		"start:prod": "sirv --port 4567 public",
 		"start:dev": "sirv --port 4567 public --dev",
 		"electron:windows": "rm -rf release && npm run build && npx electron-builder build --windows",
@@ -52,48 +54,57 @@
 		"@babel/plugin-transform-runtime": "7.11.0",
 		"@babel/preset-env": "7.11.0",
 		"@babel/runtime": "7.11.2",
-		"@commitlint/cli": "9.1.1",
-		"@commitlint/config-conventional": "9.1.1",
-		"@rollup/plugin-commonjs": "14.0.0",
-		"@rollup/plugin-node-resolve": "8.4.0",
-		"@testing-library/jest-dom": "5.11.3",
-		"@testing-library/svelte": "3.0.0",
+		"@commitlint/cli": "^9.1.1",
+		"@commitlint/config-conventional": "^9.1.1",
+		"@rollup/plugin-commonjs": "^14.0.0",
+		"@rollup/plugin-node-resolve": "^8.4.0",
+		"@rollup/plugin-typescript": "^5.0.2",
+		"@testing-library/jest-dom": "^5.11.2",
+		"@testing-library/svelte": "^3.0.0",
+		"@tsconfig/svelte": "^1.0.8",
+		"@types/jest": "^26.0.9",
+		"@types/node": "^14.0.27",
 		"babel-core": "6.26.3",
-		"babel-jest": "26.3.0",
+		"babel-jest": "26.2.2",
 		"babel-polyfill": "6.26.0",
 		"electron": "9.2.0",
-		"electron-builder": "22.8.0",
-		"electron-builder-notarize": "1.2.0",
-		"electron-reloader": "1.0.1",
-		"eslint": "7.6.0",
-		"eslint-config-airbnb-base": "14.2.0",
-		"eslint-plugin-import": "2.22.0",
-		"eslint-plugin-jest": "23.20.0",
-		"eslint-plugin-svelte3": "2.7.3",
-		"husky": "4.2.5",
-		"jest": "26.3.0",
-		"jest-localstorage-mock": "2.4.3",
-		"jest-transform-svelte": "2.1.1",
-		"lint-staged": "10.2.11",
-		"node-sass": "4.14.1",
-		"npm-run-all": "4.1.5",
-		"prettier": "2.0.5",
-		"pretty-quick": "2.0.1",
-		"rollup": "2.23.1",
-		"rollup-plugin-livereload": "1.3.0",
+		"electron-builder": "^22.8.0",
+		"electron-builder-notarize": "^1.2.0",
+		"electron-reloader": "^1.0.1",
+		"eslint": "^7.6.0",
+		"eslint-config-airbnb-base": "^14.2.0",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jest": "^23.20.0",
+		"eslint-plugin-svelte3": "^2.7.3",
+		"husky": "^4.2.5",
+		"jest": "26.2.2",
+		"jest-localstorage-mock": "^2.4.3",
+		"jest-transform-svelte": "^2.1.1",
+		"lint-staged": "^10.2.11",
+		"npm-run-all": "^4.1.5",
+		"package-lock-sanitizer": "^1.0.1",
+		"prettier": "^2.0.5",
+		"pretty-quick": "^2.0.1",
+		"rollup": "^2.23.1",
+		"rollup-plugin-livereload": "^1.3.0",
 		"rollup-plugin-svelte": "5.2.3",
-		"rollup-plugin-terser": "7.0.0",
-		"svelte": "3.24.1",
-		"svelte-jester": "1.0.6",
-		"svelte-preprocess": "4.0.11"
+		"rollup-plugin-terser": "6.1.0",
+		"sass": "^1.26.10",
+		"svelte": "^3.24.1",
+		"svelte-check": "^1.0.10",
+		"svelte-jester": "^1.0.6",
+		"svelte-preprocess": "^4.0.10",
+		"ts-jest": "^26.2.0",
+		"tslib": "^2.0.1",
+		"typescript": "^3.9.7"
 	},
 	"dependencies": {
-		"electron-context-menu": "2.3.0",
 		"electron-debug": "3.1.0",
-		"electron-log": "4.2.3",
-		"electron-unhandled": "3.0.2",
+		"electron-log": "4.2.2",
 		"electron-updater": "4.3.4",
 		"electron-util": "0.14.2",
+		"electron-context-menu": "2.3.0",
+		"electron-unhandled": "3.0.2",
 		"sirv-cli": "1.0.5"
 	},
 	"build": {
@@ -121,7 +132,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "pretty-quick --staged",
+			"pre-commit": "npm run precommit && npm run package-lock-sanitizer && git add package-lock.json",
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
 		}
 	},
