--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,8 +38,8 @@ steps:
       sonar.test.inclusions=src/**/*.test.js
       sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-- script: npm install && npm run bootstrap
-  displayName: 'npm install and bootstrap'
+- script: npm install && npm run build
+  displayName: 'npm install and build'
 
 - script: npm test -- --coverage
   displayName: 'npm run test:coverage'
