--- a/package.json
+++ b/package.json
@@ -57,50 +57,52 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "7.11.5",
+		"@babel/core": "7.11.6",
 		"@babel/plugin-transform-runtime": "7.11.5",
 		"@babel/preset-env": "7.11.5",
 		"@babel/runtime": "7.11.2",
-		"@commitlint/cli": "^9.1.2",
-		"@commitlint/config-conventional": "^9.1.2",
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-conventional": "^11.0.0",
 		"@rollup/plugin-commonjs": "^15.0.0",
 		"@rollup/plugin-node-resolve": "^9.0.0",
-		"@rollup/plugin-typescript": "^5.0.2",
+		"@rollup/plugin-replace": "^2.3.3",
+		"@rollup/plugin-typescript": "^6.0.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/svelte": "^3.0.0",
 		"@tsconfig/svelte": "^1.0.10",
-		"@types/jest": "^26.0.12",
-		"@types/node": "^14.6.2",
+		"@types/jest": "^26.0.14",
+		"@types/node": "^14.11.1",
 		"babel-core": "6.26.3",
 		"babel-jest": "26.3.0",
 		"babel-polyfill": "6.26.0",
-		"electron": "10.1.1",
-		"electron-builder": "^22.8.0",
+		"electron": "10.1.2",
+		"electron-builder": "^22.8.1",
 		"electron-builder-notarize": "^1.2.0",
 		"electron-reloader": "^1.0.1",
-		"eslint": "^7.8.1",
+		"eslint": "^7.9.0",
 		"eslint-config-airbnb-base": "^14.2.0",
 		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-jest": "^23.20.0",
+		"eslint-plugin-jest": "^24.0.1",
 		"eslint-plugin-svelte3": "^2.7.3",
-		"husky": "^4.2.5",
+		"husky": "^4.3.0",
 		"jest": "26.4.2",
 		"jest-localstorage-mock": "^2.4.3",
 		"jest-transform-svelte": "^2.1.1",
-		"lint-staged": "^10.2.13",
+		"lint-staged": "^10.4.0",
 		"npm-run-all": "^4.1.5",
 		"package-lock-sanitizer": "^1.0.1",
-		"prettier": "^2.1.1",
-		"pretty-quick": "^3.0.0",
-		"rollup": "^2.26.9",
+		"prettier": "^2.1.2",
+		"pretty-quick": "^3.0.2",
+		"rollup": "^2.27.1",
+		"rollup-plugin-filesize": "^9.0.2",
 		"rollup-plugin-livereload": "^2.0.0",
-		"rollup-plugin-svelte": "6.0.0",
-		"rollup-plugin-terser": "7.0.1",
-		"sass": "^1.26.10",
-		"svelte": "^3.24.1",
-		"svelte-check": "^1.0.33",
+		"rollup-plugin-svelte": "6.0.1",
+		"rollup-plugin-terser": "7.0.2",
+		"sass": "^1.26.11",
+		"svelte": "^3.25.1",
+		"svelte-check": "^1.0.44",
 		"svelte-jester": "^1.1.5",
-		"svelte-preprocess": "^4.2.1",
+		"svelte-preprocess": "^4.3.0",
 		"ts-jest": "^26.3.0",
 		"tslib": "^2.0.1",
 		"typescript": "^4.0.2"
@@ -111,7 +113,7 @@
 		"electron-debug": "3.1.0",
 		"electron-log": "4.2.4",
 		"electron-unhandled": "3.0.2",
-		"electron-updater": "4.3.4",
+		"electron-updater": "4.3.5",
 		"electron-util": "0.14.2",
 		"sirv-cli": "1.0.6"
 	},
