feat(config): adding more config files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"postinstall": "electron-builder install-app-deps",
 		"package-lock-sanitizer": "package-lock-sanitizer",
 		"precommit": "pretty-quick --staged",
-		"build": "rollup -c --extend",
+		"svelte-build": "rollup -c --extend",
+		"electron-build": "tsc ./src/electron/electron.ts --outDir ./public/build/",
+		"build": "run-p svelte-build electron-build",
 		"svelte-autobuild": "rollup -c -w --extend",
 		"electron-autobuild": "tsc -w ./src/electron/electron.ts --outDir ./public/build/",
 		"start": "run-p dev electron",
@@ -26,8 +28,8 @@
 		"validate": "svelte-check --workspace src/",
 		"start:prod": "sirv --port 3000 public",
 		"start:dev": "sirv --port 3000 public --dev",
-		"electron:windows": "rm -rf release && npm run build && npx electron-builder build --windows",
-		"electron:mac": "rm -rf release && npm run build && npx electron-builder build --mac",
+		"electron:windows": "npm run build && npx electron-builder build --windows",
+		"electron:mac": "npm run build && npx electron-builder build --mac",
 		"changelog": "auto-changelog"
 	},
 	"devDependencies": {
@@ -35,7 +37,6 @@
 		"@commitlint/config-conventional": "^11.0.0",
 		"@rollup/plugin-commonjs": "^17.0.0",
 		"@rollup/plugin-node-resolve": "^11.0.0",
-		"@rollup/plugin-replace": "^2.3.4",
 		"@rollup/plugin-typescript": "^8.0.0",
 		"@tsconfig/svelte": "^1.0.10",
 		"@types/node": "^14.14.13",
