--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"rollup-plugin-livereload": "^2.0.0",
 		"rollup-plugin-node-polyfills": "^0.2.1",
 		"rollup-plugin-svelte": "^7.0.0",
+		"rollup-plugin-svelte-svg": "^0.2.3",
 		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.30.0",
 		"svelte": "^3.31.0",
