--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/node": "^14.14.13",
 		"@types/superagent": "^4.1.10",
 		"@types/superagent-proxy": "^2.0.0",
+		"@types/uuid": "^8.3.0",
 		"cross-env": "^7.0.3",
 		"electron": "^11.1.0",
 		"electron-builder": "^22.9.1",
@@ -73,7 +74,8 @@
 		"ky": "^0.26.0",
 		"sirv-cli": "^1.0.10",
 		"superagent": "^6.1.0",
-		"superagent-proxy": "^2.1.0"
+		"superagent-proxy": "^2.1.0",
+		"uuid": "^8.3.2"
 	},
 	"auto-changelog": {
 		"template": "./changelog-template.hbs",
