--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"sass": "^1.30.0",
 		"svelte": "^3.31.0",
 		"svelte-check": "^1.1.22",
+		"svelte-highlight": "^0.6.2",
 		"svelte-preprocess": "^4.6.1",
 		"tslib": "^2.0.3",
 		"typescript": "^4.1.3"
