feat(offline): adding offline mode and fix import repositories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@tsconfig/svelte/tsconfig.json",
 	"compilerOptions": {
+		"types": ["node", "jest", "superagent", "superagent-proxy", "uuid"],
 		"baseUrl": "src",
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true
