--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@rollup/plugin-node-resolve": "^11.0.0",
 		"@rollup/plugin-typescript": "^8.0.0",
 		"@tsconfig/svelte": "^1.0.10",
+		"@types/marked": "^1.2.2",
 		"@types/node": "^14.14.13",
 		"@types/superagent": "^4.1.10",
 		"@types/superagent-proxy": "^2.0.0",
@@ -73,6 +74,7 @@
 		"electron-log": "^4.3.0",
 		"electron-updater": "4.3.5",
 		"ky": "^0.26.0",
+		"marked": "^2.0.0",
 		"sirv-cli": "^1.0.10",
 		"superagent": "^6.1.0",
 		"superagent-proxy": "^2.1.0",
