--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "skizzle",
-	"version": "1.2.0",
+	"version": "2.0.0-alpha",
 	"appId": "skizzle",
 	"description": "Visualisation des pull requests",
 	"main": "./public/build/electron/electron.js",
