--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"svelte-autobuild": "rollup -c -w --extend",
 		"electron-autobuild": "tsc -w ./src/electron/electron.ts --outDir ./public/build/",
 		"start": "run-p dev electron",
-		"electron": "electron .",
+		"electron": "electron --trace-warnings .",
 		"dev": "run-p start:dev electron-autobuild svelte-autobuild",
 		"test": "jest src ",
 		"test:watch": "npm run test -- --watch",
@@ -33,49 +33,49 @@
 		"changelog": "auto-changelog"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^12.0.1",
-		"@commitlint/config-conventional": "^12.0.1",
+		"@commitlint/cli": "^12.1.4",
+		"@commitlint/config-conventional": "^12.1.4",
 		"@crownframework/svelte-error-boundary": "^1.0.3",
-		"@rollup/plugin-commonjs": "^17.1.0",
-		"@rollup/plugin-node-resolve": "^11.2.0",
-		"@rollup/plugin-typescript": "^8.2.0",
-		"@tsconfig/svelte": "^1.0.10",
-		"@types/marked": "^2.0.0",
-		"@types/node": "^14.14.35",
-		"@types/superagent": "^4.1.10",
+		"@rollup/plugin-commonjs": "^19.0.0",
+		"@rollup/plugin-node-resolve": "^13.0.0",
+		"@rollup/plugin-typescript": "^8.2.1",
+		"@tsconfig/svelte": "^2.0.1",
+		"@types/marked": "^2.0.4",
+		"@types/node": "^16.3.2",
+		"@types/superagent": "^4.1.12",
 		"@types/superagent-proxy": "^2.0.0",
-		"@types/uuid": "^8.3.0",
+		"@types/uuid": "^8.3.1",
 		"cross-env": "^7.0.3",
-		"electron": "^12.0.2",
-		"electron-builder": "^22.10.5",
-		"electron-reloader": "^1.2.0",
-		"husky": "^5.2.0",
+		"electron": "^13.1.6",
+		"electron-builder": "^22.11.7",
+		"electron-reloader": "^1.2.1",
+		"husky": "^7.0.1",
 		"npm-run-all": "^4.1.5",
 		"package-lock-sanitizer": "^1.0.1",
-		"prettier": "^2.2.1",
-		"pretty-quick": "^3.1.0",
-		"rollup": "^2.42.3",
+		"prettier": "^2.3.2",
+		"pretty-quick": "^3.1.1",
+		"rollup": "^2.53.1",
 		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-filesize": "^9.1.1",
-		"rollup-plugin-livereload": "^2.0.0",
+		"rollup-plugin-livereload": "^2.0.5",
 		"rollup-plugin-node-polyfills": "^0.2.1",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-svelte-svg": "^0.2.3",
 		"rollup-plugin-terser": "^7.0.2",
-		"sass": "^1.32.8",
-		"svelte": "^3.35.0",
-		"svelte-check": "^1.3.0",
-		"svelte-highlight": "^0.7.1",
-		"svelte-preprocess": "^4.6.9",
-		"tslib": "^2.1.0",
-		"typescript": "^4.2.3"
+		"sass": "^1.35.2",
+		"svelte": "^3.38.3",
+		"svelte-check": "^2.2.2",
+		"svelte-highlight": "^3.1.0",
+		"svelte-preprocess": "^4.7.4",
+		"tslib": "^2.3.0",
+		"typescript": "^4.3.5"
 	},
 	"dependencies": {
-		"auto-changelog": "^2.2.1",
-		"electron-log": "^4.3.2",
-		"electron-updater": "4.3.8",
-		"marked": "^2.0.1",
-		"sirv-cli": "^1.0.11",
+		"auto-changelog": "^2.3.0",
+		"electron-log": "^4.3.5",
+		"electron-updater": "4.3.9",
+		"marked": "^2.1.3",
+		"sirv-cli": "^1.0.12",
 		"superagent": "^6.1.0",
 		"superagent-proxy": "^2.1.0",
 		"uuid": "^8.3.2"
