--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"url": "https://github.com/AxaGuilDEv/skizzle.git"
 	},
 	"scripts": {
-		"postinstall": "electron-builder install-app-deps",
+		"postinstall": "electron-builder install-app-deps && npx msw init ./public",
 		"package-lock-sanitizer": "package-lock-sanitizer",
 		"precommit": "pretty-quick --staged",
 		"svelte-build": "rollup -c --extend",
@@ -50,6 +50,7 @@
 		"electron-builder": "^22.11.7",
 		"electron-reloader": "^1.2.1",
 		"husky": "^7.0.1",
+		"msw": "^0.32.0",
 		"npm-run-all": "^4.1.5",
 		"package-lock-sanitizer": "^1.0.1",
 		"prettier": "^2.3.2",
