feat(mocks): adding mocks for development mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,23 @@
 {
 	"extends": "@tsconfig/svelte/tsconfig.json",
 	"compilerOptions": {
-		"types": ["node", "superagent", "superagent-proxy", "uuid", "marked"],
+		"typeRoots": [
+			"node_modules/@types"
+		],
 		"baseUrl": "src",
+		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"allowJs": true,
+		"checkJs": true,
+		"moduleResolution": "node"
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+	"include": [
+		"src/**/*"
+	],
+	"exclude": [
+		"node_modules/*",
+		"__sapper__/*",
+		"public/*"
+	]
 }
