--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@testing-library/svelte": "^3.0.3",
 		"@tsconfig/svelte": "^2.0.1",
 		"@types/jest": "^26.0.24",
+		"@types/jest-when": "^2.7.3",
 		"@types/marked": "^2.0.4",
 		"@types/node": "^16.4.0",
 		"@types/superagent": "^4.1.12",
@@ -65,6 +66,7 @@
 		"jest": "^27.0.6",
 		"jest-localstorage-mock": "^2.4.14",
 		"jest-transform-stub": "^2.0.0",
+		"jest-when": "^3.3.1",
 		"msw": "^0.32.2",
 		"npm-run-all": "^4.1.5",
 		"package-lock-sanitizer": "^1.0.1",
