feat(connection): adding test for connection to github

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build": "run-p svelte-build electron-build",
 		"svelte-autobuild": "rollup -c -w --extend",
 		"electron-autobuild": "tsc -w ./src/electron/electron.ts --outDir ./public/build/",
-		"start": "run-p dev electron",
+		"start": "cross-env TSC_WATCHFILE=UseFsEventsWithFallbackDynamicPolling run-p dev electron",
 		"electron": "electron --trace-warnings .",
 		"dev": "run-p start:dev electron-autobuild svelte-autobuild",
 		"test": "jest src --config jest.config.js",
@@ -56,6 +56,7 @@
 		"@types/superagent-proxy": "^2.0.0",
 		"@types/uuid": "^8.3.1",
 		"babel-jest": "^27.0.6",
+		"cross-env": "^7.0.3",
 		"electron": "^13.1.7",
 		"electron-builder": "^22.11.7",
 		"electron-builder-notarize": "^1.2.0",
