refactor(Code): clean code

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "skizzle",
-	"version": "2.0.7-beta",
+	"version": "2.0.8",
 	"appId": "skizzle",
 	"description": "Visualisation des pull requests",
 	"main": "./public/build/electron/electron.js",
